grammar.js
        document: $ => repeat(choice(
            $.dependency,
            $.configuration,
            $.assignment,
            $.directive,
            $.statement,
        )),
 
        // BEGIN: TYPES
        identifier: _ => /(\p{XID_Start}|_|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8})(\p{XID_Continue}|\$|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8}|[-.])*/,

        path: $ => token(seq(
            optional("+"),
            optional("/"),
            /[a-zA-Z0-9._]+|[*][*]|[*]/,
            repeat(seq("/", /[a-zA-Z0-9._\-]+|[*][*]|[*]/)),
            optional("/")
        )),

        // anything that can be assigned or normally used in place of a value
        evi: $ => choice(
            $.evaluation,
            $.value,
            $.identifier,
        ),
        
        true: _ => "true",
        false: _ => "false",
        boolean: $ => choice($.true, $.false),
        type: $ => choice(
            "bool",
            /u?int64s?/,
            /names?/,
            /paths?/,
            /dir_paths?/,
            "name_pair",
            "project_name",
            "cmdline",
            "target_triplet",
            "string",
            "json",
            seq("string", /s|_set|_map/),
            seq("json", /_array|_object|_set|_map/),
            "null",
        ),

        value: $ => choice(
            $.path,
            $.string,
            $.negated_path,
            $.pair,
            $.selection,
            $.number,
            $.boolean,
            $.str,
            $.variable,
            $.null,
        ),

        group: $ => seq(
            choice(
                $._single_group,
                $._multi_group,
                $._single_path_group,
                $._multi_path_group,
                $._anon_group,
            ),
            optional(seq(
                "@", $.path
            )),
        ),
        
        type_annotation: $ => choice(
            seq(
                "[",
                $.type,
                "]",
            ),
            $.null,
        ),

        configuration: $ => choice(
            seq(
                field("key", $.identifier),
                optional($.type_annotation),
                $._assigner,
                field("value", optional(repeat1(choice($.value, $.identifier, $.evaluation)))),
            ),
            seq(
                $.open_tailing_scope,
                repeat(seq(
                    field("key", choice($.identifier, $.variable)),
                    optional($.type_annotation),
                    $._assigner,
                    field("value", optional(repeat1(choice($.value, $.identifier, $.evaluation)))),
                    /\n/,
                )),
                "}",
            ),
        ),

        requirements: $ => seq(
            ":",
            repeat1(choice($.group, $.identifier, $.path, $.variable)),
        ),

        configuration: $ => seq(
            $.group, ":",
            choice(
                seq(
                    field("key", $.identifier),
                    optional($.type_annotation),
                    $._assigner,
                    field("value", optional(repeat1(choice($.value, $.identifier, $.evaluation)))),
                ),
                seq(
                    $.open_tailing_scope,
                    repeat(seq(
                        field("key", $.identifier),
                        optional($.type_annotation),
                        $._assigner,
                        field("value", optional(repeat1(choice($.value, $.identifier, $.evaluation)))),
                        /\n/,
                    )),
                    "}",
                ),
            ),
        ),

        dependency: $ => seq(
            choice($.group, $.path),
            repeat1($.requirements),
            optional(seq(":", $.tailing_configuration)),
            /\n/,
        ),

        // BEGIN: EVALUATIONS
        info: $ => seq(
            "info",
            field("value", choice(
                $.boolean,
                $.string,
                $.variable,
                $.number,
                $.path,
                $.evaluation,
            )),
        ),

        import: $ => seq(
            "import",
            $.identifier,
            $._assigner,
            field("from", $.identifier),
            "%",
            seq(
                field("left", $.identifier),
                "{",
                field("right", repeat1(choice($.identifier, $.path))),
                "}",
            ),
        ),

        include: $ => seq("include", $.path),
        source: $ => seq("source", $.path),

        define: $ => prec.right(PREC.ASSIGNMENT, seq(
            "define",
            optional($.type_annotation),
            field("name", $.identifier),
            ":",
            optional(field("value", $.evi))
        )),


        directive: $ => choice(
            $.define,
            $.import,
            $.include,
            $.info,
            $.source,
        ),
        // END: DIRECTIVES

        // BEGIN: FUNCTIONS
        open_tailing_scope: $ => token(/\{[ \t\f]*\r?\n/),
        tailing_configuration: $ => choice(
            seq(
                field("key", $.identifier),
                optional($.type_annotation),
                $._assigner,
                field("value", optional(repeat1(choice($.value, $.identifier)))),
            ),
            seq(
                $.open_tailing_scope,
                repeat(seq(
                    field("key", $.identifier),
                    optional($.type_annotation),
                    $._assigner,
                    field("value", optional(repeat1(choice($.value, $.identifier)))),
                    /\n/,
                )),
                "}",
            ),
        ),

        _assigner: $ => choice(
            "=",
            "=+",
            "+=",
            "-=",
            "=-",
            "?=",
            "=?",
        ),

        _single_group: $ => seq(
            field("left", $.identifier),
            $._ibrace,
            field("right", repeat1(choice($.identifier, $.path, $.negated_path, $.variable))),
            "}",
        ),

        _multi_group: $ => seq(
            field("left", seq(
                "{",
                repeat1(choice($.identifier, $.path, $.negated_path, $.variable)),
                "}",
            )),
            field("right", seq(
                "{",
                repeat1(choice($.identifier, $.path, $.variable, $.negated_path)),
                "}",
            )),  
        ),

        _anon_group: $ => seq(
            "{",
            field("members", repeat1(choice($.identifier, $.path, $.negated_path, $.variable))),
            "}",
        ),

        _single_path_group: $ => seq(
            field("path", $.path),
            field("right", seq(
                $._ibrace,
                repeat1(choice($.identifier, $.path, $.negated_path, $.variable)),
                "}",
            )),
        ),
        
        _multi_path_group: $ => seq(
            field("path", $.path),
            field("left", seq(
                $._ibrace,
                repeat1(choice($.identifier, $.path, $.negated_path, $.variable)),
                "}",
            )),
            field("right", seq(
                "{",
                repeat1(choice($.identifier, $.path, $.negated_path, $.variable)),
                "}",
            )),
        ),
