test/corpus/001-directive-define.txt
===============================================================================
directive: define
===============================================================================
define [bool] happy: false
-------------------------------------------------------------------------------
(document
  (directive
    (define
      (type_annotation
        (type))
      name: (identifier)
      value: (evi
        (value
          (boolean
            (false)))))))
