test/corpus/002-directive-info.txt
===============================================================================
directive: info
===============================================================================
info true
-------------------------------------------------------------------------------
(document
  (directive
    (info
      value: (boolean
        (true)))))
