test/corpus/003-directive-source.txt
===============================================================================
directive: source
===============================================================================
source ../foo.build
-------------------------------------------------------------------------------
(document
  (directive
    (source
      (path))))
