test/corpus/004-directive-include.txt
===============================================================================
directive: include
===============================================================================
include */
-------------------------------------------------------------------------------
(document
  (directive
    (include
      (path))))
