test/corpus/005-directive-import.txt
===============================================================================
directive: import
===============================================================================
import libfoo = foo%lib{foo}
-------------------------------------------------------------------------------
(document
  (directive
    (import
      (identifier)
      from: (identifier)
      left: (identifier)
      right: (identifier))))
