test/corpus/006-configuration-path.txt
===============================================================================
configuration: path
===============================================================================
tests/: install = false
-------------------------------------------------------------------------------
(document
  (configuration
    (path)
    key: (identifier)
    value: (value
      (boolean
        (false)))))
