test/corpus/007-configuration-scope.txt
===============================================================================
configuration: scope
===============================================================================
tests/:
{
    install = true
}
-------------------------------------------------------------------------------
(document
  (configuration
    (path)
    (open_tailing_scope)
    key: (identifier)
    value: (value
      (boolean
        (true)))))
